--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
           },
           "dependencies": {
                     "@react-native-async-storage/async-storage": "~1.15.0",
+                    "@react-navigation/bottom-tabs": "^6.0.9",
                     "@react-navigation/native": "^6.0.6",
                     "@react-navigation/native-stack": "^6.2.5",
                     "expo": "~43.0.2",
@@ -21,6 +22,7 @@
                     "react-native-screens": "~3.8.0",
                     "react-native-snap-carousel": "^3.9.1",
                     "react-native-svg": "^12.1.1",
+                    "react-native-swiper": "^1.6.0",
                     "react-native-web": "0.17.1",
                     "react-redux": "^7.2.6",
                     "redux": "^4.1.2",
