feat(userPayment): add header add header for userPayment tab

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "NativeTemplates",
-    "slug": "NativeTemplates",
+    "name": "Adeco",
+    "slug": "adeco",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
