--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
                     "react-redux": "^7.2.6",
                     "redux": "^4.1.2",
                     "redux-devtools-extension": "^2.13.9",
-                    "redux-thunk": "^2.4.1"
+                    "redux-thunk": "^2.4.1",
+                    "use-count-up": "^3.0.1"
           },
           "devDependencies": {
                     "@babel/core": "^7.12.9"
