--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@reduxjs/toolkit": "^1.8.4",
     "@types/react-native-snap-carousel": "^3.8.5",
     "deprecated-react-native-prop-types": "^2.2.0",
-    "expo": "~46.0.6",
+    "expo": "~46.0.8",
     "expo-splash-screen": "~0.16.1",
     "expo-status-bar": "~1.4.0",
     "native-base": "^3.4.12",
@@ -24,6 +24,7 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.4",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-modalize": "^2.1.1",
     "react-native-portalize": "^1.0.7",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
