--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.2.2",
     "@reduxjs/toolkit": "^1.8.4",
     "@types/react-native-snap-carousel": "^3.8.5",
+    "@types/react-redux": "^7.1.24",
     "deprecated-react-native-prop-types": "^2.2.0",
     "expo": "~46.0.8",
     "expo-splash-screen": "~0.16.1",
