--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@gorhom/portal": "^1.0.14",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/datetimepicker": "6.2.0",
     "@react-native-masked-view/masked-view": "0.2.7",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.11",
@@ -18,13 +19,14 @@
     "@types/react-native-snap-carousel": "^3.8.5",
     "@types/react-redux": "^7.1.24",
     "deprecated-react-native-prop-types": "^2.2.0",
-    "expo": "~46.0.8",
-    "expo-splash-screen": "~0.16.1",
+    "expo": "~46.0.13",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "moment": "^2.29.4",
     "native-base": "^3.4.12",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.4",
+    "react-native": "0.69.5",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-modalize": "^2.1.1",
     "react-native-portalize": "^1.0.7",
