--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/datetimepicker": "6.2.0",
     "@react-native-masked-view/masked-view": "0.2.7",
     "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/material-top-tabs": "^6.3.0",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "@reduxjs/toolkit": "^1.8.4",
@@ -35,11 +36,13 @@
     "react-native-screens": "~3.15.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "12.3.0",
+    "react-native-tab-view": "^3.3.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "use-count-up": "^3.0.1"
+    "use-count-up": "^3.0.1",
+    "react-native-pager-view": "5.4.24"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
