--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.69.5",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-modalize": "^2.1.1",
+    "react-native-pager-view": "5.4.24",
     "react-native-portalize": "^1.0.7",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
@@ -41,8 +42,7 @@
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "use-count-up": "^3.0.1",
-    "react-native-pager-view": "5.4.24"
+    "use-count-up": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
