--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-redux": "^7.1.24",
     "deprecated-react-native-prop-types": "^2.2.0",
     "expo": "~46.0.17",
+    "expo-haptics": "~11.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "moment": "^2.29.4",
@@ -31,6 +32,7 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-modalize": "^2.1.1",
     "react-native-pager-view": "5.4.24",
+    "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-portalize": "^1.0.7",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
@@ -42,8 +44,7 @@
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "use-count-up": "^3.0.1",
-    "expo-haptics": "~11.3.0"
+    "use-count-up": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
