--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-status-bar": "~1.4.0",
     "moment": "^2.29.4",
     "native-base": "^3.4.12",
+    "numeral": "^2.0.6",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
@@ -33,7 +34,6 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-modalize": "^2.1.1",
     "react-native-pager-view": "5.4.24",
-    "react-native-parallax-header": "^1.1.4",
     "react-native-portalize": "^1.0.7",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/numeral": "^2.0.2",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
     "typescript": "~4.3.5"
