--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "numeral": "^2.0.6",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "lottie-react-native": "5.1.3",
     "react-native": "0.69.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.5.0",
