--- a/package.json
+++ b/package.json
@@ -24,18 +24,19 @@
     "expo-haptics": "~11.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "lottie-react-native": "5.1.3",
     "moment": "^2.29.4",
     "native-base": "^3.4.12",
     "numeral": "^2.0.6",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "lottie-react-native": "5.1.3",
     "react-native": "0.69.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-modalize": "^2.1.1",
     "react-native-pager-view": "5.4.24",
     "react-native-portalize": "^1.0.7",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
