--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "use-count-up": "^3.0.1"
+    "use-count-up": "^3.0.1",
+    "expo-image-picker": "~13.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
