--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "deprecated-react-native-prop-types": "^2.2.0",
     "expo": "~46.0.17",
     "expo-haptics": "~11.3.0",
+    "expo-image-picker": "~13.3.1",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "lottie-react-native": "5.1.3",
     "moment": "^2.29.4",
-    "native-base": "^3.4.12",
     "numeral": "^2.0.6",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -47,8 +47,7 @@
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "use-count-up": "^3.0.1",
-    "expo-image-picker": "~13.3.1"
+    "use-count-up": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
