--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "use-count-up": "^3.0.1"
+    "use-count-up": "^3.0.1",
+    "expo-notifications": "~0.16.1",
+    "expo-linking": "~3.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
