--- a/app.json
+++ b/app.json
@@ -1,35 +1,34 @@
 {
-  "expo": {
-    "name": "Adeco",
-    "slug": "adeco-app",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.dukizwe.adecoapp"
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      },
-      "package": "com.dukizwe.adecoapp"
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    }
-  }
+          "expo": {
+                    "name": "Adeco",
+                    "slug": "adeco-app",
+                    "version": "1.0.0",
+                    "orientation": "portrait",
+                    "icon": "./assets/icon.png",
+                    "userInterfaceStyle": "light",
+                    "splash": {
+                              "image": "./assets/splash.png",
+                              "resizeMode": "contain",
+                              "backgroundColor": "#ffffff"
+                    },
+                    "updates": {
+                              "fallbackToCacheTimeout": 0
+                    },
+                    "assetBundlePatterns": ["**/*"],
+                    "ios": {
+                              "supportsTablet": true,
+                              "bundleIdentifier": "com.dukizwe.adecoapp"
+                    },
+                    "android": {
+                              "adaptiveIcon": {
+                                        "foregroundImage": "./assets/adaptive-icon.png",
+                                        "backgroundColor": "#FFFFFF"
+                              },
+                              "package": "com.dukizwe.adecoapp"
+                    },
+                    "web": {
+                              "favicon": "./assets/favicon.png"
+                    },
+                    "scheme": "adeco"
+          }
 }
