--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,7 +42,7 @@ newArchEnabled=false
 
 # The hosted JavaScript engine
 # Supported values: expo.jsEngine = "hermes" | "jsc"
-expo.jsEngine=jsc
+expo.jsEngine=hermes
 
 # Enable GIF support in React Native images (~200 B increase)
 expo.gif.enabled=true
@@ -51,3 +51,8 @@ expo.webp.enabled=true
 # Enable animated webp support (~3.4 MB increase)
 # Disabled by default because iOS doesn't support animated webp
 expo.webp.animated=false
+
+MYAPP_UPLOAD_STORE_FILE=adeco-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=adeco-key
+MYAPP_UPLOAD_STORE_PASSWORD=Bbikoriman6+8
+MYAPP_UPLOAD_KEY_PASSWORD=Bbikoriman6+8
