--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "expo": "~46.0.17",
     "expo-haptics": "~11.3.0",
     "expo-image-picker": "~13.3.1",
+    "expo-linking": "~3.2.2",
+    "expo-notifications": "~0.16.1",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "lottie-react-native": "5.1.3",
@@ -30,7 +32,7 @@
     "numeral": "^2.0.6",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-native": "0.69.6",
+    "react-native": "0.69.7",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-modalize": "^2.1.1",
@@ -47,9 +49,7 @@
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "use-count-up": "^3.0.1",
-    "expo-notifications": "~0.16.1",
-    "expo-linking": "~3.2.2"
+    "use-count-up": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
